[gd_scene load_steps=16 format=3 uid="uid://dg6b383uu57gw"]

[ext_resource type="Script" uid="uid://bb2rn8vqrtgvw" path="res://scenes/main/Main.gd" id="1_n4bun"]
[ext_resource type="Script" uid="uid://ce4r8wnuhabdp" path="res://scenes/systems/GrowthSystem.gd" id="3_owxry"]
[ext_resource type="Script" uid="uid://d1ttsg07wibc6" path="res://scenes/systems/Life_and_Death_System.gd" id="4_swvnd"]
[ext_resource type="PackedScene" uid="uid://qg7lvik2bxea" path="res://scenes/world/World.tscn" id="5_s0kl3"]
[ext_resource type="Script" uid="uid://cxpj0jnveg5gt" path="res://scenes/world/worldstatistic.gd" id="6_fk23c"]
[ext_resource type="Script" uid="uid://b33kexfvm250v" path="res://scenes/world/WorldController.gd" id="7_ue65q"]
[ext_resource type="PackedScene" uid="uid://h61xedcwmhfc" path="res://scenes/world/ArmRoot.tscn" id="8_fd7xd"]
[ext_resource type="Script" uid="uid://bastr0lbnque8" path="res://scenes/world/arm_root.gd" id="9_iokj2"]
[ext_resource type="Script" uid="uid://chw5l8qqevlrn" path="res://scenes/systems/food_manager.gd" id="13_t3qrq"]
[ext_resource type="PackedScene" uid="uid://bbh2ghiqgwxfm" path="res://scenes/world/Food_source.tscn" id="14_3ba7x"]
[ext_resource type="PackedScene" uid="uid://bwui3xiyn727a" path="res://scenes/ui/UI.tscn" id="16_71mfc"]
[ext_resource type="Script" uid="uid://bqm3dsxtmyjrs" path="res://scenes/ui/UIController.gd" id="17_tih84"]
[ext_resource type="Texture2D" uid="uid://cathembwxrk67" path="res://assets/sprites/icon.svg" id="18_oswmv"]

[sub_resource type="ButtonGroup" id="ButtonGroup_p5fgu"]

[sub_resource type="LabelSettings" id="LabelSettings_3km4f"]

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_n4bun")

[node name="ArmGrowth" type="Node2D" parent="."]
process_mode = 1

[node name="GrowthSystem" type="Node2D" parent="ArmGrowth"]
script = ExtResource("3_owxry")

[node name="Life_and_Death_System" type="Node2D" parent="ArmGrowth"]
script = ExtResource("4_swvnd")

[node name="World" parent="." instance=ExtResource("5_s0kl3")]
process_mode = 1

[node name="WorldStatistik" type="Node2D" parent="World" groups=["Statistik"]]
script = ExtResource("6_fk23c")

[node name="WorldController" type="Node2D" parent="World"]
script = ExtResource("7_ue65q")

[node name="ArmRoot" parent="World" instance=ExtResource("8_fd7xd")]
script = ExtResource("9_iokj2")

[node name="Food" type="Node2D" parent="."]

[node name="FoodManager" type="Node2D" parent="Food"]
script = ExtResource("13_t3qrq")
food_scene = ExtResource("14_3ba7x")
min_distance = 25.0

[node name="Ui" parent="." instance=ExtResource("16_71mfc")]
process_mode = 3
script = ExtResource("17_tih84")

[node name="Control_UI" type="CanvasLayer" parent="Ui"]

[node name="CloseProgrammButton" type="Button" parent="Ui/Control_UI"]
modulate = Color(1, 0, 0, 1)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 11.0
offset_right = -16.0
offset_bottom = 42.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
text = "X"

[node name="MenuButton" type="MenuButton" parent="Ui/Control_UI"]
custom_minimum_size = Vector2(50, 100)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -194.0
offset_top = 55.0
offset_right = -97.0
offset_bottom = 155.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
button_group = SubResource("ButtonGroup_p5fgu")
icon = ExtResource("18_oswmv")
expand_icon = true

[node name="Panel" type="Panel" parent="Ui/Control_UI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -370.0
offset_bottom = 253.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/Control_UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 128.0
offset_right = -1.0
offset_bottom = 825.0
grow_horizontal = 0
alignment = 1

[node name="Anzahl Futterquellen" type="Label" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
text = "Anzahl Futterquellen: "

[node name="FutteranzahlSlider" type="HSlider" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
min_value = 15.0
max_value = 350.0
value = 100.0
tick_count = 14

[node name="Größe einer Futterquelle" type="Label" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
text = "Größe einer Futterquelle: "

[node name="FuttermengeSlider" type="HSlider" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
min_value = 100.0
max_value = 100000.0
value = 10000.0

[node name="Feldgröße" type="Label" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
text = "Feldgröße: "

[node name="FeldgrößeSlider" type="HSlider" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 7.0

[node name="FoodSpawnButton" type="Button" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Food Spawnen"

[node name="Widerstandsfähigkeit" type="Label" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
text = "Widerstandsfähigkeit: "

[node name="LebenspunkteSlider" type="HSlider" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 75.0
value = 50.0

[node name="Sonnenlicht" type="Label" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
text = "Sonnenlicht: "

[node name="SonnenlichtSlider" type="HSlider" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
value = 15.0

[node name="Temperatur" type="Label" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
text = "Temperatur: "

[node name="TemperaturSlider" type="HSlider" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
min_value = -50.0
value = 22.0

[node name="Luftfeuchtigkeit" type="Label" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
text = "Luftfeuchtigkeit: "

[node name="LuftfeuchtigkeitSlider" type="HSlider" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
value = 70.0

[node name="Startarme" type="Label" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
text = "Startarme"
label_settings = SubResource("LabelSettings_3km4f")

[node name="StartarmeSlider" type="HSlider" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 8.0
value = 4.0
tick_count = 5
ticks_on_borders = true
ticks_position = 3

[node name="Simulationsgeschwindigkeit" type="Label" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
text = "Simulationsgeschwindigkeit: "

[node name="SimulationSpeedSlider" type="HSlider" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="Button" type="Button" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Start"

[node name="ColorRect" type="ColorRect" parent="Ui/Control_UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
color = Color(0.21, 0.21, 0.21, 1)

[node name="ResetButton" type="Button" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Reset"

[node name="Statistik2" type="Label" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2

[node name="Statistik" type="Button" parent="Ui/Control_UI/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Statistik"

[connection signal="arm_has_grown_new_segment" from="ArmGrowth/GrowthSystem" to="World/WorldController" method="_on_growth_system_arm_has_grown_new_segment"]
[connection signal="new_segment_alive" from="ArmGrowth/GrowthSystem" to="World/WorldController" method="_on_growth_system_new_segment_alive"]
[connection signal="simulation_over_signal" from="World/WorldStatistik" to="." method="_on_world_statistik_simulation_over_signal"]
[connection signal="simulation_over_signal" from="World/WorldStatistik" to="Ui" method="_on_world_statistik_simulation_over_signal"]
[connection signal="grow_arm" from="World/WorldController" to="ArmGrowth/GrowthSystem" method="_on_world_controller_grow_arm"]
[connection signal="reset_game" from="World/WorldController" to="." method="_on_world_controller_reset_game"]
[connection signal="spawnFood" from="World/WorldController" to="Food/FoodManager" method="_on_world_controller_spawn_food"]
[connection signal="arms_count_changed" from="Ui" to="World/WorldController" method="_on_ui_arms_count_changed"]
[connection signal="reset_simulation" from="Ui" to="World/WorldController" method="_on_ui_reset_simulation"]
[connection signal="simulation_toggled" from="Ui" to="." method="_on_ui_simulation_toggled"]
[connection signal="spawn_food" from="Ui" to="World/WorldController" method="_on_ui_spawn_food"]
[connection signal="statistikPressed" from="Ui" to="World/WorldStatistik" method="_on_ui_statistik_pressed"]
[connection signal="update_fieldsize" from="Ui" to="World/WorldController" method="_on_ui_update_fieldsize"]
[connection signal="update_food_amount" from="Ui" to="World/WorldController" method="_on_ui_update_food_amount"]
[connection signal="update_food_count" from="Ui" to="World/WorldController" method="_on_ui_update_food_count"]
[connection signal="update_humidity" from="Ui" to="World/WorldController" method="_on_ui_update_humidity"]
[connection signal="update_life_points_for_arms" from="Ui" to="World/WorldController" method="_on_ui_update_life_points_for_arms"]
[connection signal="update_lightamount" from="Ui" to="World/WorldController" method="_on_ui_update_lightamount"]
[connection signal="update_simulation_speed" from="Ui" to="." method="_on_ui_update_simulation_speed"]
[connection signal="update_temperature" from="Ui" to="World/WorldController" method="_on_ui_update_temperature"]
[connection signal="pressed" from="Ui/Control_UI/CloseProgrammButton" to="Ui" method="_on_close_programm_button_pressed"]
[connection signal="pressed" from="Ui/Control_UI/MenuButton" to="Ui" method="_on_menu_button_pressed"]
[connection signal="value_changed" from="Ui/Control_UI/VBoxContainer/FutteranzahlSlider" to="Ui" method="_on_futteranzahl_value_changed"]
[connection signal="value_changed" from="Ui/Control_UI/VBoxContainer/FuttermengeSlider" to="Ui" method="_on_futtergröße_value_changed"]
[connection signal="value_changed" from="Ui/Control_UI/VBoxContainer/FeldgrößeSlider" to="Ui" method="_on_feldgröße_value_changed"]
[connection signal="pressed" from="Ui/Control_UI/VBoxContainer/FoodSpawnButton" to="Ui" method="_on_food_spawn_button_pressed"]
[connection signal="value_changed" from="Ui/Control_UI/VBoxContainer/LebenspunkteSlider" to="Ui" method="_on_robustheit_arme_lebenspunkte_value_changed"]
[connection signal="value_changed" from="Ui/Control_UI/VBoxContainer/SonnenlichtSlider" to="Ui" method="_on_sonnenlicht_value_changed"]
[connection signal="value_changed" from="Ui/Control_UI/VBoxContainer/TemperaturSlider" to="Ui" method="_on_temperatur_value_changed"]
[connection signal="value_changed" from="Ui/Control_UI/VBoxContainer/LuftfeuchtigkeitSlider" to="Ui" method="_on_luftfeuchtigkeit_value_changed"]
[connection signal="value_changed" from="Ui/Control_UI/VBoxContainer/StartarmeSlider" to="Ui" method="_on_startarme_slider_value_changed"]
[connection signal="value_changed" from="Ui/Control_UI/VBoxContainer/SimulationSpeedSlider" to="Ui" method="_on_simulation_speed_value_changed"]
[connection signal="pressed" from="Ui/Control_UI/VBoxContainer/Button" to="Ui" method="_on_button_pressed"]
[connection signal="pressed" from="Ui/Control_UI/VBoxContainer/ResetButton" to="Ui" method="_on_reset_button_pressed"]
[connection signal="pressed" from="Ui/Control_UI/VBoxContainer/Statistik" to="Ui" method="_on_statistik_pressed"]
